--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -1,7 +1,526 @@
-/*
-background-grey: #F4F3F4;
-button-purple: #192592
-main-titles dark-grey: #2C303F;
-paragraph grey: #5b5e6d;
-nav grey: #5b5e6d;
-*/
+/* VARIABLES */
+:root {
+	--background-grey: #f4f3f4;
+	--button-purple: #192592;
+	--button-blue: #4049aa;
+	--main-titles-dark-grey: #2c303f;
+	--paragraph-grey: #5b5e6d;
+	--nav-grey: #5b5e6d;
+	--light-grey: #ebebeb;
+}
+
+/* RESETS */
+html,
+body,
+h1,
+h3,
+input,
+p,
+ul {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-size: 10px;
+}
+
+/* NAV BAR */
+nav {
+	position: sticky;
+	top: 0;
+	background-color: white;
+	width: 100vw;
+	border-bottom: 1px solid var(--light-grey);
+}
+nav img {
+	height: 50px;
+	padding-left: 30px;
+}
+nav i {
+	float: right;
+	font-size: 2.5rem;
+	color: var(--nav-grey);
+	margin-right: 30px;
+	padding: 15px 0px;
+}
+
+/* HEADER */
+header {
+	padding: 30px 30px 20px 30px;
+}
+header h1 {
+	color: var(--main-titles-dark-grey);
+	font-size: 3.7rem;
+}
+header p {
+	font-size: 1.8rem;
+	color: var(--paragraph-grey);
+	margin: 30px 0px;
+}
+header input,
+main input {
+	padding: 12px 0px 12px 10px;
+	font-size: 1.8rem;
+	border: 1px solid var(--light-grey);
+	border-radius: 5px;
+	margin-top: 10px;
+	width: 400px;
+}
+header input:focus,
+main input:focus {
+	outline-color: var(--nav-grey);
+}
+header button,
+main button {
+	background-color: var(--button-blue);
+	color: white;
+	font-weight: 600;
+	border-radius: 5px;
+	padding: 16px 20px;
+	margin-top: 20px;
+	border-style: none;
+	transition: background-color 0.2s;
+}
+header button:hover,
+main button:hover {
+	background-color: var(--button-purple);
+	cursor: pointer;
+}
+#sign-in {
+	margin: 0;
+	margin-top: 15px;
+}
+header img {
+	display: block;
+	margin: auto;
+	margin-top: 15px;
+	transition: width 0.2s;
+	width: 400px;
+}
+
+/* MAIN */
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: var(--background-grey);
+	border-top: 1px solid var(--light-grey);
+	padding: 20px 30px 0px 30px;
+}
+main > div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+main h2 {
+	color: var(--main-titles-dark-grey);
+	text-align: center;
+	font-size: 2.6rem;
+}
+main p {
+	text-align: center;
+	font-size: 1.8rem;
+	color: var(--paragraph-grey);
+}
+#discover-btn {
+	background-color: white;
+	border: 1px solid var(--button-purple);
+	padding: 14px 20px;
+	border-radius: 5px;
+	color: var(--button-purple);
+	font-weight: 800;
+	margin-bottom: 40px;
+}
+#discover-btn:hover {
+	border: 2px solid var(--button-purple);
+	padding: 13px 20px;
+}
+#logos-container {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+}
+.logo-box {
+	border-bottom: 1px solid var(--nav-grey);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+	padding: 20px 0px;
+}
+.logo-box img {
+	width: 200px;
+}
+#try-it-container {
+	background-color: white;
+	padding: 40px;
+	border-bottom: 1px solid var(--light-grey);
+	border-top: 1px solid var(--light-grey);
+	margin-top: 50px;
+	width: 100%;
+}
+#try-it-container p {
+	color: var(--paragraph-grey);
+	font-size: 1.8rem;
+	font-weight: 400;
+}
+#try-it-container a {
+	color: var(--button-blue);
+}
+
+#try-it-title {
+	font-size: 2.2rem;
+	color: var(--main-titles-dark-grey);
+}
+
+/* FOOTER */
+/* First footer list */
+#slack-logo {
+	width: 150px;
+	height: 150px;
+	margin-left: -30px;
+}
+#footer-list {
+	display: flex;
+	flex-flow: row wrap;
+}
+#footer-list ul {
+	padding: 0px;
+}
+#footer-list ul li {
+	width: 127px;
+	transition: color 0.2s;
+}
+#footer-list ul li:hover,
+#footer-contact-list ul li:hover,
+#social-container i:hover {
+	color: var(--button-purple);
+	cursor: pointer;
+}
+#footer-list ul li,
+#footer-contact-list ul li {
+	list-style-type: none;
+	font-size: 1.8rem;
+	color: var(--paragraph-grey);
+	margin: 10px 0px;
+	transition: color 0.2s;
+}
+#social-container i {
+	transition: color 0.2s;
+}
+#footer-list ul li:first-child {
+	font-weight: 900;
+}
+
+/* Second footer list */
+#footer-contact-list {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	background-color: var(--background-grey);
+	color: var(--paragraph-grey);
+	font-weight: 900;
+	height: 120px;
+	padding: 10px 0px;
+}
+#footer-contact-list ul {
+	display: flex;
+	justify-content: center;
+	padding: 0px;
+}
+#footer-contact-list ul li {
+	margin: 0px 6px;
+}
+
+#flag-container {
+	font-size: 1.8rem;
+	width: 150px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+#flag {
+	width: 20px;
+}
+#social-container {
+	width: 130px;
+	font-size: 1.8rem;
+	display: flex;
+	justify-content: space-around;
+}
+
+@media (max-width: 767px) {
+	/* NAV BAR */
+	nav > ul {
+		display: none;
+	}
+
+	/* HEADER */
+	header input,
+	main input {
+		width: 100%;
+	}
+
+	header button,
+	main button {
+		width: 100%;
+	}
+	#sign-in {
+		text-align: center;
+	}
+	header img {
+		width: 315px;
+	}
+
+	/* MAIN */
+	#discover-btn {
+		width: 100%;
+	}
+	.logo-box {
+		width: 90%;
+	}
+	.logo-box:last-child {
+		border: none;
+	}
+	#try-it-title {
+		text-align: center;
+	}
+
+	/* FOOTER */
+	/* First footer list */
+	#footer-list-container {
+		display: flex;
+		flex-direction: column;
+		padding-left: 60px;
+	}
+	#footer-list ul {
+		width: 40%;
+		padding: 0px 40px 20px 20px;
+	}
+	#social-container {
+		margin-top: 20px;
+	}
+
+	/* Second footer list */
+}
+
+@media (min-width: 768px) and (max-width: 961px) {
+	/* NAV BAR */
+	nav > ul {
+		display: none;
+	}
+
+	/* HEADER */
+	header p {
+		width: 70%;
+	}
+
+	/* MAIN */
+	.logo-box {
+		width: 40%;
+	}
+	.logo-box:nth-child(odd) {
+		border-right: 1px solid var(--nav-grey);
+	}
+	.logo-box:last-child,
+	.logo-box:nth-child(5) {
+		border-bottom: none;
+	}
+	#try-it-container {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	#try-it-container button {
+		margin: 0px 0px 0px 10px;
+	}
+	/* FOOTER */
+	/* First footer list */
+	#slack-logo {
+		padding: 0;
+		margin-left: 15px;
+		margin-right: 30px;
+		height: 120px;
+		width: 120px;
+	}
+	#footer-list-container {
+		display: flex;
+		margin: 25px 0px;
+	}
+	#footer-list-container ul {
+		width: 150px;
+	}
+	#footer-contact-list {
+		flex-direction: row;
+	}
+	#footer-contact-list div {
+		display: flex;
+	}
+	#social-container {
+		width: 100px;
+	}
+}
+@media (min-width: 962px) and (max-width: 1200px) {
+	/* NAV BAR */
+	nav > ul {
+		display: none;
+	}
+
+	/* HEADER */
+	header p {
+		width: 60%;
+	}
+
+	/* MAIN */
+	.logo-box {
+		width: 33%;
+	}
+	.logo-box:nth-child(1),
+	.logo-box:nth-child(2),
+	.logo-box:nth-child(4),
+	.logo-box:nth-child(5) {
+		border-right: 1px solid var(--nav-grey);
+	}
+	.logo-box:nth-child(4),
+	.logo-box:nth-child(5),
+	.logo-box:nth-child(6) {
+		border-bottom: none;
+	}
+	#try-it-container {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	#try-it-container button {
+		margin: 0px 0px 0px 10px;
+	}
+	/* FOOTER */
+	/* First footer list */
+	#slack-logo {
+		padding: 0;
+		margin-left: 15px;
+		margin-right: 30px;
+		height: 120px;
+		width: 120px;
+	}
+	#footer-list-container {
+		display: flex;
+		margin: 25px 0px;
+	}
+	#footer-list-container ul {
+		width: 150px;
+	}
+	#footer-contact-list {
+		flex-direction: row;
+	}
+	#footer-contact-list div {
+		display: flex;
+	}
+	#social-container {
+		width: 100px;
+	}
+}
+@media (min-width: 1200px) {
+	/* NAV BAR */
+	.fa-bars {
+		display: none;
+	}
+	nav {
+		display: flex;
+		justify-content: space-between;
+	}
+	nav > ul {
+		list-style-type: none;
+		font-size: 1.8rem;
+		color: var(--paragraph-grey);
+		display: flex;
+		align-items: center;
+		margin-right: 60px;
+	}
+	nav > ul li {
+		margin: 0px 10px;
+		padding: 5px 10px;
+		transition: color 0.2s;
+	}
+	nav > ul li:last-child {
+		border: 1px solid var(--paragraph-grey);
+		border-radius: 5px;
+	}
+	nav > ul li:hover {
+		color: var(--button-purple);
+		cursor: pointer;
+	} 
+
+	/* HEADER */
+	header {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: space-around;
+	}
+	#work-happens-section {
+		width: 600px;
+	}
+	#work-happens-section h1 {
+		font-size: 7rem;
+	}
+	header p {
+		width: 80%;
+	}
+	header img {
+		margin: 0;
+	}
+
+	/* MAIN */
+	.logo-box {
+		width: 33%;
+	}
+	.logo-box:nth-child(1),
+	.logo-box:nth-child(2),
+	.logo-box:nth-child(4),
+	.logo-box:nth-child(5) {
+		border-right: 1px solid var(--nav-grey);
+	}
+	.logo-box:nth-child(4),
+	.logo-box:nth-child(5),
+	.logo-box:nth-child(6) {
+		border-bottom: none;
+	}
+	#try-it-container {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	#try-it-container button {
+		margin: 0px 0px 0px 10px;
+	}
+	/* FOOTER */
+	/* First footer list */
+	#slack-logo {
+		padding: 0;
+		margin-left: 15px;
+		margin-right: 30px;
+		height: 120px;
+		width: 120px;
+	}
+	#footer-list-container {
+		display: flex;
+		justify-content: center;
+		margin: 25px 0px;
+	}
+	#footer-list-container ul {
+		width: 150px;
+	}
+	#footer-contact-list {
+		flex-direction: row;
+		justify-content: space-between;
+		padding: 0px 40px;
+	}
+	#footer-contact-list div {
+		display: flex;
+	}
+	#social-container {
+		width: 100px;
+	}
+}
